fixed project details alignment issues on diff viewports; optimised ruchika profile_pic;

--- a/src/components/projectCard/projectCard.scss
+++ b/src/components/projectCard/projectCard.scss
@@ -3,8 +3,10 @@
 div.card {
   border-radius: 8px;
   &.work-card {
-    @include media-breakpoint-up(md) {
-      width: calc(100% + 4.5rem) !important;
+    &.our-work-section-card {
+      @include media-breakpoint-up(md) {
+        width: calc(100% + 4.5rem) !important;
+      }
     }
     div.card-body {
       span.badge {
